--- a/index.html
+++ b/index.html
@@ -11,37 +11,48 @@
 </head>
 
 <body>
+ 
+    <div class="shadow-sm p-3 mb-5 bg-body-tertiary rounded border border-success-subtle ">
+        <p class="text-center fs-1">Store your Products </p>
+    </div>
 
+ 
 
-    <div class="w-75 mx-auto my-5">
+    <div class="w-75 mx-auto my-5 ">
         <div class="form-group">
-            <label for="productName">productName :</label>
+            <label for="productName">product Name :</label>
             <input onkeyup="Vailedname(this.value)" class="my-2 form-control" type="text" name="productName"
                 id="productName">
             <small class="text-muted txc" id="sml-Name"> productName must be char only </small>
         </div>
-        <div class="form-group">
-            <label for="productPrice">productPrice :</label>
+
+
+
+
+        <div class="form-group my-5">
+            <label for="productPrice">product Price :</label>
             <input onkeyup="VailedPrice(this.value)" value=0 class="my-2 form-control" type="number" name="productPrice"
                 id="productPrice">
             <small class="text-muted" id="sml-Price"> productPrice must be number only </small>
         </div>
-        <div class="form-group">
-            <label for="productCategory">productCategory :</label>
+
+        <div class="form-group my-5">
+            <label for="productCategory">product Category :</label>
             <input onkeyup="VailedCategory(this.value)" class="my-2 form-control" type="text" name="productCategory"
                 id="productCategory">
             <small class="text-muted" id="sml-Cat"> productCategory must be char only </small>
         </div>
-        <div class="form-group">
-            <label for="productDescription">productDescription :</label>
+        <div class="form-group my-5">
+            <label for="productDescription">product Description :</label>
             <textarea class="my-2 form-control areaTX" type="text" name="productDescription"
                 id="productDescription"> </textarea>
-            <small class="text-muted" id="sml-desc"> productDescription must be char only </small>
+            <small class="text-muted" id="sml-desc"> Description your product  </small>
         </div>
-
+        <div class="d-grid gap-2">
+          
         <button id="ADD" on class=" btn btn-outline-info my-2" onclick="GetProdect()">Add Product </button>
     </div>
-
+</div>
 
     <div class="w-75 mx-auto m-5">
         <label for="search">Search by Prodeuct Name :</label>
